[package]
name = "smart_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cid = { version = "0.8.4", default-features = false }
multihash = { version = "0.16.2", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_tuple = "0.5.0"
anyhow = "1.0.69"
base64 = "0.21.0"
serde_json = "1.0.94"


fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_ipld_encoding = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_ipld_blockstore = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_ipld_hamt = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }

[dev-dependencies]
fvm_sdk = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }
fvm_ipld_hamt = { git = "https://github.com/filecoin-project/ref-fvm.git", rev = "a8f15212" }

libsecp256k1 = { version = "0.7.1" }
rand = "0.8.5"
rand_chacha = "0.3.1"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"